--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- SEO Meta Tags -->
     <title>Contact Plombier Évreux | Devis Gratuit | SmartPlomb Clim</title>
     <meta name="description"
-        content="Contactez SmartPlomb Clim à Évreux (27000). Demandez votre devis gratuit pour plomberie, chauffage ou climatisation. Réponse rapide. 02 32 28 41 69." />
+        content="Contactez SmartPlomb Clim à Évreux (27000). Ouvert du lundi au vendredi. Urgences 24h/24 au 06 58 95 27 84." />
     <meta name="keywords"
         content="contact plombier évreux, devis gratuit, adresse smartplomb clim, téléphone plombier 27000, france, maroc" />
     <meta name="robots" content="index, follow" />
@@ -66,7 +66,7 @@
                                     Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                 </li>
                             </ul>
                         </div>
@@ -148,7 +148,7 @@
 
                         <div class="bg-dark text-white p-4 text-center rounded border border-warning mb-5">
                             <i class="fas fa-phone-alt mb-3 text-warning" style="font-size:40px;"></i>
-                            <div class="fw-bold fs-2" style="font-family:'Oswald', sans-serif;">02 32 28 41 69</div>
+                            <div class="fw-bold fs-2" style="font-family:'Oswald', sans-serif;">06 58 95 27 84</div>
                             <div class="text-warning mt-2">Ligne Directe Technicien</div>
                         </div>
 
@@ -191,7 +191,7 @@
                                         27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                    <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                    <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                     </li>
                                 </ul>
                             </div>
