--- a/devis.html
+++ b/devis.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- SEO Meta Tags -->
-    <title>Demande de Devis Plomberie & Chauffage | SmartPlomb Clim</title>
+    <title>Demande de Devis Gratuit | Plomberie & Chauffage Évreux | 06 58 95 27 84</title>
     <meta name="description"
         content="Estimez le coût de vos travaux. Devis gratuit et sans engagement pour plomberie, chauffage, climatisation sur Évreux (27000) et environs." />
     <meta name="keywords"
@@ -66,7 +66,7 @@
                                     Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                 </li>
                             </ul>
                         </div>
@@ -180,7 +180,7 @@
                                         27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                    <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                    <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                     </li>
                                 </ul>
                             </div>
