--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description"
         content="SmartPlomb Clim : Expert en plomberie, chauffage et climatisation à Évreux (27000). Urgence 24/7. Installation et dépannage en France. Services adaptés pour projets au Maroc." />
     <meta name="keywords"
-        content="plombier évreux, chauffagiste 27000, dépannage plomberie, climatisation évreux, urgence plomberie 24/7, smartplomb clim, installation sanitaire, rge, france, maroc" />
+        content="Besoin d'un plombier en urgence à Évreux ? Intervention en 30 min 24h/24 et 7j/7. Fuite d'eau, chaudière en panne, débouchage. Appelez le 06 58 95 27 84." />
     <meta name="author" content="SmartPlomb Clim" />
     <meta name="robots" content="index, follow" />
 
@@ -48,7 +48,7 @@
       "image": "https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw",
       "@id": "https://urgence-depannage-plomberie-ch.me",
       "url": "https://urgence-depannage-plomberie-ch.me",
-      "telephone": "+33232284169",
+      "telephone": "+33658952784",
       "priceRange": "€€",
       "address": {
         "@type": "PostalAddress",
@@ -130,7 +130,7 @@
                                     Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                 </li>
                             </ul>
                         </div>
@@ -317,9 +317,9 @@
                                 sur Évreux et ses alentours.</p>
                         </div>
                         <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
-                            <a href="tel:0232284169" class="btn btn-warning px-5 py-3 rounded-0 fw-bold btn-glow"
-                                style="background:#FFD700; border:none; color:black; font-size:1.2rem;">02 32 28 41
-                                69</a>
+                            <a href="tel:0658952784" class="btn btn-warning px-5 py-3 rounded-0 fw-bold btn-glow"
+                                style="background:#FFD700; border:none; color:black; font-size:1.2rem;">06 58 95 27
+                                84</a>
                         </div>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                                         27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
-                                    <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
+                                    <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                     </li>
                                 </ul>
                             </div>
