--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
                             <ul class="topbar-info d-flex mb-0 justify-content-end clearfix list-unstyled">
                                 <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27000
                                     Evreux, France</li>
-                                <li class="me-4"><a href="mailto:contact@stinc.fr"><i
-                                            class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
+                                <li class="me-4"><a href="mailto:technicgazservice@gmail.com"><i
+                                            class="fas fa-envelope me-2"></i>technicgazservice@gmail.com</a></li>
                                 <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                 </li>
                             </ul>
@@ -159,7 +159,8 @@
                                         class="fas fa-map-marker-alt text-warning me-3 fs-4"></i> 423 rue de
                                     Cocherel, 27000 Evreux, France</li>
                                 <li class="d-flex align-items-center"><i
-                                        class="fas fa-envelope text-warning me-3 fs-4"></i> contact@stinc.fr</li>
+                                        class="fas fa-envelope text-warning me-3 fs-4"></i> technicgazservice@gmail.com
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -189,8 +190,8 @@
                                 <ul class="footer-list list-unstyled">
                                     <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel,
                                         27000 Evreux, France</li>
-                                    <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
-                                                class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
+                                    <li class="mb-2"><a href="mailto:technicgazservice@gmail.com"><i
+                                                class="fas fa-envelope me-2"></i>technicgazservice@gmail.com</a></li>
                                     <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                     </li>
                                 </ul>
