--- a/depannage.html
+++ b/depannage.html
@@ -94,6 +94,8 @@
                                     <li class="current-menu-item"><a href="depannage"
                                             class="transition-link nav-btn-urgent">Demande d'intervention urgente</a>
                                     </li>
+                                    <li><a href="https://maps.app.goo.gl/BPZforjxxmXR8NTR7" target="_blank"
+                                            class="transition-link">Localisation</a></li>
                                 </ul>
                             </nav>
                         </div>
