--- a/magasin.html
+++ b/magasin.html
@@ -100,6 +100,8 @@
                                     <li><a href="devis" class="transition-link">Demande de devis</a></li>
                                     <li><a href="depannage" class="transition-link nav-btn-urgent">Demande
                                             d'intervention urgente</a></li>
+                                    <li><a href="https://maps.app.goo.gl/BPZforjxxmXR8NTR7" target="_blank"
+                                            class="transition-link">Localisation</a></li>
                                 </ul>
                             </nav>
                         </div>
