--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,8 @@
                                             de devis</a></li>
                                     <li><a href="depannage" class="transition-link nav-btn-urgent">Demande
                                             d'intervention urgente</a></li>
+                                    <li><a href="https://maps.app.goo.gl/BPZforjxxmXR8NTR7" target="_blank"
+                                            class="transition-link">Localisation</a></li>
                                 </ul>
                             </nav>
                         </div>
