--- a/index.html
+++ b/index.html
@@ -316,9 +316,10 @@
                                 sur Évreux et ses alentours.</p>
                         </div>
                         <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
-                            <a href="tel:0658952784" class="btn btn-warning px-5 py-3 rounded-0 fw-bold btn-glow"
-                                style="background:#FFD700; border:none; color:black; font-size:1.2rem;">06 58 95 27
-                                84</a>
+                            <a href="depannage"
+                                class="btn btn-warning px-5 py-3 rounded-0 fw-bold btn-glow transition-link"
+                                style="background:#FFD700; border:none; color:black; font-size:1.2rem;">DEMANDER UNE
+                                INTERVENTION</a>
                         </div>
                     </div>
                 </div>
