Adapter Envoie du Contact

--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
 
                             <div class="p-3 mb-4" style="background-color: #f8f9fa; border-left: 4px solid #FFD700;">
                                 <p class="mb-0 text-dark">
-                                    <i class="fas fa-handshake me-2" style="color:#0f6a36;"></i>
-                                    Nous collaborons en partenariat avec <strong>Basic-Fit</strong>, garantissant un
-                                    service fiable et adapté aux environnements professionnels exigeants.
+                                    <i class="fas fa-check-circle me-2" style="color:#0f6a36;"></i>
+                                    Une expertise reconnue pour des interventions de qualité, garantissant un service
+                                    fiable, réactif et adapté aux exigences des professionnels comme des particuliers.
                                 </p>
                             </div>
 
