--- a/contact.html
+++ b/contact.html
@@ -126,20 +126,23 @@
                 <div class="row g-5">
                     <div class="col-lg-6 bg-light p-5 rounded">
                         <h2 class="mb-4">Formulaire de Contact</h2>
-                        <form style="display:flex; flex-direction:column; gap:15px;">
-                            <input type="text" placeholder="Nom Complet" class="form-control p-3">
-                            <input type="email" placeholder="Email" class="form-control p-3">
-                            <input type="tel" placeholder="Téléphone" class="form-control p-3">
-                            <select class="form-select p-3">
-                                <option>Type de demande</option>
-                                <option>Devis Gratuit</option>
-                                <option>Dépannage Urgent</option>
-                                <option>Entretien</option>
-                                <option>Autre</option>
+                        <form id="contact-form" style="display:flex; flex-direction:column; gap:15px;">
+                            <input type="text" name="Nom_Complet" placeholder="Nom Complet" class="form-control p-3"
+                                required>
+                            <input type="email" name="Email" placeholder="Email" class="form-control p-3" required>
+                            <input type="tel" name="Telephone" placeholder="Téléphone" class="form-control p-3"
+                                required>
+                            <select name="Type_Demande" class="form-select p-3" required>
+                                <option value="" disabled selected>Type de demande</option>
+                                <option value="Devis Gratuit">Devis Gratuit</option>
+                                <option value="Dépannage Urgent">Dépannage Urgent</option>
+                                <option value="Entretien">Entretien</option>
+                                <option value="Autre">Autre</option>
                             </select>
-                            <textarea placeholder="Votre message..." class="form-control p-3"
-                                style="height:150px;"></textarea>
-                            <button class="btn btn-primary w-100">ENVOYER</button>
+                            <textarea name="Message" placeholder="Votre message..." class="form-control p-3"
+                                style="height:150px;" required></textarea>
+                            <button type="submit" class="btn btn-primary w-100 btn-submit-contact">ENVOYER</button>
+                            <div id="contact-form-feedback"></div>
                         </form>
                     </div>
 
@@ -242,6 +245,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
