--- a/devis.html
+++ b/devis.html
@@ -130,28 +130,33 @@
                             <p class="lead text-muted">Remplissez le formulaire ci-dessous et nous vous répondrons sous
                                 24h.</p>
                         </div>
-                        <form style="display:flex; flex-direction:column; gap:20px;">
+                        <form id="quote-form" style="display:flex; flex-direction:column; gap:20px;">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input type="text" placeholder="Nom Complet" class="form-control p-3">
+                                    <input type="text" name="Nom_Complet" placeholder="Nom Complet"
+                                        class="form-control p-3" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="tel" placeholder="Téléphone" class="form-control p-3">
+                                    <input type="tel" name="Telephone" placeholder="Téléphone" class="form-control p-3"
+                                        required>
                                 </div>
                             </div>
-                            <input type="email" placeholder="Email" class="form-control p-3">
-                            <input type="text" placeholder="Adresse d'intervention" class="form-control p-3">
-                            <select class="form-select p-3">
-                                <option>Type de travaux</option>
-                                <option>Installation Plomberie</option>
-                                <option>Remplacement Chaudière</option>
-                                <option>Installation Climatisation</option>
-                                <option>Rénovation Salle de Bain</option>
-                                <option>Autre</option>
+                            <input type="email" name="Email" placeholder="Email" class="form-control p-3" required>
+                            <input type="text" name="Adresse_Intervention" placeholder="Adresse d'intervention"
+                                class="form-control p-3" required>
+                            <select name="Type_Travaux" class="form-select p-3" required>
+                                <option value="" disabled selected>Type de travaux</option>
+                                <option value="Installation Plomberie">Installation Plomberie</option>
+                                <option value="Remplacement Chaudière">Remplacement Chaudière</option>
+                                <option value="Installation Climatisation">Installation Climatisation</option>
+                                <option value="Rénovation Salle de Bain">Rénovation Salle de Bain</option>
+                                <option value="Autre">Autre</option>
                             </select>
-                            <textarea placeholder="Description de votre projet..." class="form-control p-3"
-                                style="height:150px;"></textarea>
-                            <button class="btn btn-primary w-100 fs-5 py-3">OBTENIR MON DEVIS</button>
+                            <textarea name="Message" placeholder="Description de votre projet..."
+                                class="form-control p-3" style="height:150px;" required></textarea>
+                            <button type="submit" class="btn btn-primary w-100 fs-5 py-3 btn-submit-quote">OBTENIR MON
+                                DEVIS</button>
+                            <div id="quote-form-feedback"></div>
                         </form>
                     </div>
                 </div>
@@ -230,6 +235,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
