--- a/chauffage.html
+++ b/chauffage.html
@@ -53,9 +53,10 @@
                         <div class="col-md-4">
                             <div class="topbar-socials list-social">
                                 <ul class="d-flex gap-3 list-unstyled mb-0">
-                                    <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.facebook.com/share/1ByVzaz6Kn/" target="_blank"><i
+                                                class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://share.google/UXHX3FtsBVH9t3yon" target="_blank"><i
+                                                class="fas fa-map-marker-alt"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -159,9 +160,12 @@
                                 </div>
                                 <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
                                     d'urgence 24h/24 et 7j/7.</p>
-                                <div class="footer-socials"><a href="#"><i class="fab fa-facebook-f"></i></a><a
-                                        href="#"><i class="fab fa-linkedin-in"></i></a><a href="#"><i
-                                            class="fab fa-instagram"></i></a></div>
+                                <div class="footer-socials">
+                                    <a href="https://www.facebook.com/share/1ByVzaz6Kn/" target="_blank"><i
+                                            class="fab fa-facebook-f"></i></a>
+                                    <a href="https://share.google/UXHX3FtsBVH9t3yon" target="_blank"><i
+                                            class="fas fa-map-marker-alt"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
