--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <ul class="d-flex gap-3 list-unstyled mb-0">
                                     <li><a href="https://www.facebook.com/share/1ByVzaz6Kn/" target="_blank"><i
                                                 class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://share.google/UXHX3FtsBVH9t3yon" target="_blank"><i
+                                    <li><a href="https://maps.app.goo.gl/1XwA29h54ZYkreuj9" target="_blank"><i
                                                 class="fas fa-map-marker-alt"></i></a></li>
                                 </ul>
                             </div>
@@ -344,7 +344,7 @@
                                 <div class="footer-socials">
                                     <a href="https://www.facebook.com/share/1ByVzaz6Kn/" target="_blank"><i
                                             class="fab fa-facebook-f"></i></a>
-                                    <a href="https://share.google/UXHX3FtsBVH9t3yon" target="_blank"><i
+                                    <a href="https://maps.app.goo.gl/1XwA29h54ZYkreuj9" target="_blank"><i
                                             class="fas fa-map-marker-alt"></i></a>
                                 </div>
                             </div>
