--- a/climatisation.html
+++ b/climatisation.html
@@ -79,8 +79,8 @@
                     <div class="octf-mainbar-row octf-row">
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo"><a href="/" class="stinc-logo transition-link"><span
-                                        class="logo-text">SmartPlomb
-                                        Clim</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
+                                        class="logo-text">Technic Gaz
+                                        Service</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
                                         CHAUFFAGE</span></a></div>
                         </div>
                         <div class="octf-col menu-col d-none d-lg-block">
@@ -156,7 +156,8 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
                             <div class="widget-footer">
                                 <div class="site-logo mb-3"><span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                        style="color:white; font-size:24px; font-weight:bold;">Technic Gaz
+                                        Service</span>
                                 </div>
                                 <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
                                     d'urgence 24h/24 et 7j/7.</p>
