--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- SEO Meta Tags -->
-    <title>Contact Plombier Évreux | Devis Gratuit | SmartPlomb Clim</title>
+    <title>Contact Plombier Évreux | Devis Gratuit | Technic Gaz Service</title>
     <meta name="description"
-        content="Contactez SmartPlomb Clim à Évreux (27000). Ouvert du lundi au vendredi. Urgences 24h/24 au 06 58 95 27 84." />
+        content="Contactez Technic Gaz Service à Évreux (27000). Ouvert du lundi au vendredi. Urgences 24h/24 au 06 58 95 27 84." />
     <meta name="keywords"
-        content="contact plombier évreux, devis gratuit, adresse smartplomb clim, téléphone plombier 27000, france, maroc" />
+        content="contact plombier évreux, devis gratuit, adresse technic gaz service, téléphone plombier 27000, france, maroc" />
     <meta name="robots" content="index, follow" />
 
     <!-- Geo & OG Tags -->
@@ -20,7 +20,7 @@
     <meta name="ICBM" content="49.0241, 1.1508" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Contactez SmartPlomb Clim - Évreux" />
+    <meta property="og:title" content="Contactez Technic Gaz Service - Évreux" />
     <meta property="og:description"
         content="Une question ? Un projet ? Contactez-nous pour un devis gratuit ou une intervention." />
     <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/contact.html" />
@@ -79,8 +79,8 @@
                     <div class="octf-mainbar-row octf-row">
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo"><a href="/" class="stinc-logo transition-link"><span
-                                        class="logo-text">SmartPlomb
-                                        Clim</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
+                                        class="logo-text">Technic Gaz
+                                        Service</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
                                         CHAUFFAGE</span></a></div>
                         </div>
                         <div class="octf-col menu-col d-none d-lg-block">
@@ -181,7 +181,8 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
                             <div class="widget-footer">
                                 <div class="site-logo mb-3"><span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                        style="color:white; font-size:24px; font-weight:bold;">Technic Gaz
+                                        Service</span>
                                 </div>
                                 <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
                                     d'urgence 24h/24 et 7j/7.</p>
