--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- ///tetsts -->
     <!-- SEO Meta Tags -->
-    <title>Plombier Chauffagiste Évreux | SmartPlomb Clim - France & Maroc</title>
+    <title>Plombier Évreux (27000) | Dépannage Urgence 24h/24 | Technic Gaz Service</title>
     <meta name="description"
-        content="SmartPlomb Clim : Expert en plomberie, chauffage et climatisation à Évreux (27000). Urgence 24/7. Installation et dépannage en France. Services adaptés pour projets au Maroc." />
+        content="Technic Gaz Service : Plombier chauffagiste à Évreux (27000). Dépannage d'urgence 24h/7, fuite d'eau, débouchage, chauffage et climatisation." />
     <meta name="keywords"
-        content="Besoin d'un plombier en urgence à Évreux ? Intervention en 30 min 24h/24 et 7j/7. Fuite d'eau, chaudière en panne, débouchage. Appelez le 06 58 95 27 84." />
-    <meta name="author" content="SmartPlomb Clim" />
+        content="plombier évreux, technic gaz service, dépannage plomberie 27000, urgence plombier évreux, installateur climatisation evreux, chauffagiste évreux" />
+    <meta name="author" content="Technic Gaz Service" />
     <meta name="robots" content="index, follow" />
 
     <!-- Geo Tags (Evreux, France) -->
@@ -23,17 +23,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="business.business" />
-    <meta property="og:title" content="SmartPlomb Clim - Plomberie & Chauffage Évreux" />
+    <meta property="og:title" content="Technic Gaz Service - Plombier Évreux Dépannage d'Urgence" />
     <meta property="og:description"
         content="Intervention rapide 24/7 pour plomberie, chauffage et climatisation. Particuliers et Pros. France & Maroc." />
     <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/" />
     <meta property="og:image"
         content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
-    <meta property="og:site_name" content="SmartPlomb Clim" />
+    <meta property="og:site_name" content="Technic Gaz Service" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="SmartPlomb Clim - Urgence Plomberie" />
+    <meta name="twitter:title" content="Technic Gaz Service - Urgence Plomberie" />
     <meta name="twitter:description"
         content="Expertise plomberie, chauffage, climatisation. Service 24/7 Évreux et environs." />
     <meta name="twitter:image"
@@ -44,7 +44,7 @@
     {
       "@context": "https://schema.org",
       "@type": "PlumbingService",
-      "name": "SmartPlomb Clim",
+      "name": "Technic Gaz Service",
       "image": "https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw",
       "@id": "https://urgence-depannage-plomberie-ch.me",
       "url": "https://urgence-depannage-plomberie-ch.me",
@@ -146,7 +146,7 @@
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo">
                                 <a href="/" class="stinc-logo transition-link">
-                                    <span class="logo-text">SmartPlomb Clim</span>
+                                    <span class="logo-text">Technic Gaz Service</span>
                                     <span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE • CHAUFFAGE</span>
                                 </a>
                             </div>
@@ -258,12 +258,12 @@
                         <div class="col-lg-6 ps-lg-5">
                             <span class="sub-heading d-block mb-2"
                                 style="color:#0f6a36; font-weight:800; text-transform:uppercase; letter-spacing:2px;">[
-                                SmartPlomb Clim ]</span>
+                                Technic Gaz Service ]</span>
                             <h2 class="section-title mb-4" style="font-size:3rem; line-height:1.2;">Votre
                                 Expert<br>Plomberie & CVC</h2>
 
                             <p class="lead text-dark mb-4">
-                                <strong>SmartPlomb Clim</strong>, société spécialisée en plomberie, chauffage et
+                                <strong>Technic Gaz Service</strong>, société spécialisée en plomberie, chauffage et
                                 climatisation, intervient pour tous vos travaux d’installation, de dépannage et de
                                 maintenance, auprès des particuliers comme des professionnels.
                             </p>
@@ -337,7 +337,8 @@
                             <div class="widget-footer">
                                 <div class="site-logo mb-3">
                                     <span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                        style="color:white; font-size:24px; font-weight:bold;">Technic Gaz
+                                        Service</span>
                                 </div>
                                 <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
                                     d'urgence 24h/24 et 7j/7.</p>
