--- a/magasin.html
+++ b/magasin.html
@@ -86,7 +86,7 @@
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo">
                                 <a href="/" class="stinc-logo transition-link">
-                                    <span class="logo-text">SmartPlomb Clim</span>
+                                    <span class="logo-text">Technic Gaz Service</span>
                                     <span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE • CHAUFFAGE</span>
                                 </a>
                             </div>
@@ -192,7 +192,8 @@
                             <div class="widget-footer">
                                 <div class="site-logo mb-3">
                                     <span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                        style="color:white; font-size:24px; font-weight:bold;">Technic Gaz
+                                        Service</span>
                                 </div>
                                 <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
                                     d'urgence 24h/24 et 7j/7.</p>
