--- a/plomberie.html
+++ b/plomberie.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- SEO Meta Tags -->
-    <title>Plomberie Évreux | Dépannage & Installation | SmartPlomb Clim</title>
+    <title>Plomberie Évreux | Technic Gaz Service</title>
     <meta name="description"
         content="Service de plomberie complet à Évreux (27000). Recherche de fuite, débouchage, installation sanitaire. Intervention 24/7. Devis gratuit." />
     <meta name="keywords"
