--- a/depannage.html
+++ b/depannage.html
@@ -9,7 +9,7 @@
     <!-- SEO Meta Tags -->
     <title>Urgence Plomberie Évreux 24/7 | Dépannage Rapide | SmartPlomb Clim</title>
     <meta name="description"
-        content="Besoin d'un plombier en urgence à Évreux ? Intervention en 30 min 24h/24 et 7j/7. Fuite d'eau, chaudière en panne, débouchage. Appelez le 06 58 95 27 84." />
+        content="Besoin d'un plombier en urgence à Évreux ? Intervention 24h/24 et 7j/7. Fuite d'eau, chaudière en panne, débouchage. Appelez le 06 58 95 27 84." />
     <meta name="keywords"
         content="urgence plombier évreux, dépannage 24/7, sos plomberie, fuite d'eau nuit, week-end, 27000, smartplomb clim, france" />
     <meta name="robots" content="index, follow" />
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="URGENCE Plomberie 24/7 à Évreux" />
     <meta property="og:description"
-        content="Intervention en 30 min pour toute urgence plomberie et chauffage. Disponible 24h/24." />
+        content="Intervention rapide pour toute urgence plomberie et chauffage. Disponible 24h/24." />
     <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/depannage.html" />
     <meta property="og:image"
         content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
@@ -129,9 +129,6 @@
                     <div class="col-lg-10">
                         <div class="text-center mb-5">
                             <h2 class="mb-2 text-danger" style="font-size:3em;">URGENCE 24H/24 & 7J/7</h2>
-                            <p class="lead fw-bold">Intervention rapide en moins de 30 minutes sur Evreux (27000) et
-                                alentours.
-                            </p>
                         </div>
 
                         <div class="row g-4">
@@ -247,15 +244,6 @@
                                     <li><a href="tel:0658952784"><i class="fas fa-phone-alt me-2"></i>06 58 95 27 84</a>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
-                            <div class="widget-footer">
-                                <h6>Horaires</h6>
-                                <div class="footer-desc">
-                                    <p class="mb-2"><b>Ouverture :</b><br>Lun-Jeu 8h-12h / 13h30-18h<br>Ven 8h-12h</p>
-                                    <p><b>Showroom :</b><br>Lun-Jeu 8h-12h / 13h30-18h<br>Ven 8h-12h</p>
-                                </div>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
